# 4ward

./: .gitignore  Dockerfile  Procfile  fly.toml  pyproject.toml
app/: main.py
app/api/v1/routers/: ussd.py
app/core/: config.py  messages.py  schema.py
app/services/: encryption.py  hubtel.py  laison.py
